--- a/compose/.apps/samba/samba.yml
+++ b/compose/.apps/samba/samba.yml
@@ -3,15 +3,6 @@
 services:
   samba:
     container_name: samba
-    command:
-      - -u "${SAMBA_USERNAME};${SAMBA_PASSWORD}" \
-        -s "Books;/data/books;yes;no;no;${SAMBA_USERNAME}" \
-        -s "Comics;/data/comics;yes;no;no;${SAMBA_USERNAME}" \
-        -s "Docker Config;/data/docker/config;yes;no;no;${SAMBA_USERNAME}" \
-        -s "Downloads;/data/downloads;yes;no;no;${SAMBA_USERNAME}" \
-        -s "Movies;/data/movies;yes;no;no;${SAMBA_USERNAME}" \
-        -s "Music;/data/music;yes;no;no;${SAMBA_USERNAME}" \
-        -s "TV;/data/tv;yes;no;no;${SAMBA_USERNAME}"
     restart: unless-stopped
     logging:
       driver: "json-file"
@@ -24,10 +15,12 @@ services:
       - USERID=${PUID}
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ${DOCKERCONFDIR}:/data/docker/config
-      - ${DOWNLOADSDIR}:/data/downloads
-      - ${MEDIADIR_COMICS}:/data/comics
-      - ${MEDIADIR_BOOKS}:/data/books
-      - ${MEDIADIR_MOVIES}:/data/movies
-      - ${MEDIADIR_MUSIC}:/data/music
-      - ${MEDIADIR_TV}:/data/tv
+      - ${DOCKERCONFDIR}:/dockerconf
+      - ${DOWNLOADSDIR}:/downloads
+      - ${MEDIADIR_COMICS}:/comics
+      - ${MEDIADIR_BOOKS}:/books
+      - ${MEDIADIR_MOVIES}:/movies
+      - ${MEDIADIR_MUSIC}:/music
+      - ${MEDIADIR_TV}:/tv
+    command:
+      - '-u "${SAMBA_USERNAME};${SAMBA_PASSWORD}" -s "Books;/books;yes;no;no;${SAMBA_USERNAME}" -s "Comics;/comics;yes;no;no;${SAMBA_USERNAME}" -s "DockerConf;/dockerconf;yes;no;no;${SAMBA_USERNAME}" -s "Downloads;/downloads;yes;no;no;${SAMBA_USERNAME}" -s "Movies;/movies;yes;no;no;${SAMBA_USERNAME}" -s "Music;/music;yes;no;no;${SAMBA_USERNAME}" -s "TV;/tv;yes;no;no;${SAMBA_USERNAME}"'
