--- a/compose/.apps/samba/samba.yml
+++ b/compose/.apps/samba/samba.yml
@@ -15,12 +15,13 @@ services:
       - USERID=${PUID}
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ${DOCKERCONFDIR}:/dockerconf
-      - ${DOWNLOADSDIR}:/downloads
-      - ${MEDIADIR_COMICS}:/comics
-      - ${MEDIADIR_BOOKS}:/books
-      - ${MEDIADIR_MOVIES}:/movies
-      - ${MEDIADIR_MUSIC}:/music
-      - ${MEDIADIR_TV}:/tv
+      - ${DOCKERCONFDIR}:/shares/dockerconf
+      - ${DOCKERSHAREDDIR}:/shares/shared
+      - ${DOWNLOADSDIR}:/shares/downloads
+      - ${MEDIADIR_BOOKS}:/shares/books
+      - ${MEDIADIR_COMICS}:/shares/comics
+      - ${MEDIADIR_MOVIES}:/shares/movies
+      - ${MEDIADIR_MUSIC}:/shares/music
+      - ${MEDIADIR_TV}:/shares/tv
     command:
-      - '-u "${SAMBA_USERNAME};${SAMBA_PASSWORD}" -s "Books;/books;yes;no;no;${SAMBA_USERNAME}" -s "Comics;/comics;yes;no;no;${SAMBA_USERNAME}" -s "DockerConf;/dockerconf;yes;no;no;${SAMBA_USERNAME}" -s "Downloads;/downloads;yes;no;no;${SAMBA_USERNAME}" -s "Movies;/movies;yes;no;no;${SAMBA_USERNAME}" -s "Music;/music;yes;no;no;${SAMBA_USERNAME}" -s "TV;/tv;yes;no;no;${SAMBA_USERNAME}"'
+      - '-u "${SAMBA_USERNAME};${SAMBA_PASSWORD}" -s "Shares;/shares;yes;no;no;${SAMBA_USERNAME}"'
