More Samba fixes

--- a/compose/.env.example
+++ b/compose/.env.example
@@ -481,6 +481,8 @@ SABNZBDVPN_ENABLE_PRIVOXY=no
 SAMBA_ENABLED=false
 SAMBA_BACKUP_CONFIG=true
 SAMBA_NETWORK_MODE=
+SAMBA_PORT_137=137
+SAMBA_PORT_138=138
 SAMBA_PORT_139=139
 SAMBA_PORT_445=445
 SAMBA_USERNAME=DockSTARTer
