--- a/compose/.apps/samba/samba.yml
+++ b/compose/.apps/samba/samba.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ${DOCKERCONFDIR}:/shares/dockerconf
+      - ${DOCKERCONFDIR}/samba:/etc/samba
       - ${DOCKERSHAREDDIR}:/shares/shared
       - ${DOWNLOADSDIR}:/shares/downloads
       - ${MEDIADIR_BOOKS}:/shares/books
