--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ jobs:
         - curl -fsSL https://raw.githubusercontent.com/nemchik/ShellSuite/master/shellsuite.sh -o shellsuite.sh && bash shellsuite.sh -p "${PWD}" -v "shfmt" -f " -s -i 4 -ci -sr -d"
         - "docker run --rm -v ${PWD}:/code pipelinecomponents/yamllint yamllint -d '{extends: default, rules: {document-start: {present: false}, line-length: disable}}' $(git ls-files '*.yaml' '*.yml')"
     - stage: run
+      env: TEST=first_install
+      script:
+        - sudo apt-get install curl git
+        - 'bash -c "$(curl -fsSL https://get.dockstarter.com)"'
+    - stage: run
       env: TEST=run_install
       script: sudo bash ./main.sh -t ${TEST}
     - stage: run
